--- a/src/index.css
+++ b/src/index.css
@@ -765,8 +765,8 @@ font-size: 24px;
 margin-right: 420px;
     }
     .image_interface{
-        width: 375px;
-        height: 350px;
+        width: 100%;
+        height: 550px;
     }
 .center_paragraph{
     position: relative;
